<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddCardActivity"
    android:layout_margin="7dp"
    android:id="@+id/cardConstraintLayout">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cardNameTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cardNameTIET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textPersonName"
            android:hint="@string/name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cardNumberTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_baseline_qr_code_scanner_24"
        app:endIconContentDescription="@string/scan"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/cardNameTIL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cardNumberTIET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cardStoreTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:endIconMode="dropdown_menu"
        android:hint="@string/store"
        app:layout_constraintTop_toBottomOf="@id/cardNumberTIL">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/cardStoreACTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:paddingStart="15dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cardValueTypeTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/code_type"
        android:focusable="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:endIconMode="dropdown_menu"
        app:layout_constraintTop_toBottomOf="@id/cardStoreTIL">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/cardTypeACTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:paddingStart="15dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:textCursorDrawable="@null" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cardSaveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cardValueTypeTIL"
        android:text="@string/save"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cardDeleteBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/cardSaveBtn"
        android:text="@string/delete"/>

</androidx.constraintlayout.widget.ConstraintLayout>